--- a/Agro-detect.ipynb
+++ b/Agro-detect.ipynb
@@ -1,42 +1,66 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import torch\n",
-    "import torch.nn as nn"
-   ]
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Agro-detect.ipynb",
+      "version": "0.3.2",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "agro",
+      "language": "python",
+      "name": "agro"
+    }
   },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  }
- ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "agro",
-   "language": "python",
-   "name": "agro"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.8"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "metadata": {
+        "id": "9Pec-P6UCbch",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "import torch\n",
+        "import torch.nn \n",
+        "from torchvision import datasets, transforms, models"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "zT6nAcC_Cbcl",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "# load the data from the folders\n",
+        "data_dir = 'data'\n",
+        "\n",
+        "train_transforms = transforms.Compose([transforms.RandomRotation(30),\n",
+        "                                       transforms.RandomResizedCrop(224),\n",
+        "                                       transforms.RandomHorizontalFlip(),\n",
+        "                                       transforms.ToTensor(),\n",
+        "                                       transforms.Normalize([0.485, 0.456, 0.406],\n",
+        "                                                            [0.229, 0.224, 0.225])])\n",
+        "\n",
+        "test_transforms = transforms.Compose([transforms.Resize(255),\n",
+        "                                      transforms.CenterCrop(224),\n",
+        "                                      transforms.ToTensor(),\n",
+        "                                      transforms.Normalize([0.485, 0.456, 0.406],\n",
+        "                                                           [0.229, 0.224, 0.225])])\n",
+        "\n",
+        "\n",
+        "train_data = datasets.ImageFolder(data_dir + '/train', transform=train_transforms)\n",
+        "\n",
+        "\n",
+        "trainloader = torch.utils.data.DataLoader(train_data, batch_size=64, shuffle=True)\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    }
+  ]
 }
