Train the model

--- a/Agro-detect.ipynb
+++ b/Agro-detect.ipynb
@@ -69,11 +69,11 @@
       "metadata": {
         "id": "XG-i248SjoyI",
         "colab_type": "code",
+        "outputId": "c8b80be9-0ad4-4cc8-a4d5-7758ca65e71f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
-        },
-        "outputId": "154d78a7-5414-4c34-fff6-7dc6ef86fb5b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -96,11 +96,11 @@
       "metadata": {
         "id": "gyvhzooT9jB4",
         "colab_type": "code",
+        "outputId": "b3755bbd-b86a-4fd1-8237-26e3cfbc0ea5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 13957
-        },
-        "outputId": "c5ad10f1-3ce7-4f8d-f400-d73127256851"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1010,11 +1010,11 @@
       "metadata": {
         "id": "DysyM8GKGONp",
         "colab_type": "code",
+        "outputId": "26c66246-eb30-461f-a038-4f564b613b7a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 14110
-        },
-        "outputId": "ffeda8f2-0fd9-45bc-a270-3b2dab313205"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -1024,7 +1024,7 @@
         "\n",
         "model.to(device)"
       ],
-      "execution_count": 22,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1864,9 +1864,61 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 22
+          "execution_count": 8
         }
       ]
+    },
+    {
+      "metadata": {
+        "id": "K3f7LcrOUINL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "epochs = 10\n",
+        "\n",
+        "for epoch in range(epochs):\n",
+        "    running_loss = 0\n",
+        "    for images, labels in train_loader:\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
+        "        \n",
+        "        optimizer.zero_grad()\n",
+        "        \n",
+        "        outputs = model(images)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()\n",
+        "        optimizer.step()\n",
+        "        \n",
+        "        running_loss += loss.item()\n",
+        "        \n",
+        "    else:\n",
+        "        validation_loss = 0\n",
+        "        accuracy = 0\n",
+        "        \n",
+        "        with torch.no_grad():\n",
+        "            model.eval()\n",
+        "            for images, labels in val_loader:\n",
+        "                images, labels = images.to(device), labels.to(device)\n",
+        "                outputs = model(images)\n",
+        "                loss = criterion(outputs, labels)\n",
+        "                validation_loss += loss.item()\n",
+        "                \n",
+        "                ps = torch.exp(outputs)\n",
+        "                top_p, top_class = ps.topk(1, dim=1)\n",
+        "                equals = top_class == labels.view(*top_class.shape)\n",
+        "                accuracy += torch.mean(equals.type(torch.FloatTensor))\n",
+        "        \n",
+        "        model.train()\n",
+        "\n",
+        "        print(\"Epoch: {}/{}.. \".format(epoch+1, epochs),\n",
+        "              \"Training Loss: {:.3f}.. \".format(running_loss/len(train_loader)),\n",
+        "              \"Valid Loss: {:.3f}.. \".format(validation_loss/len(val_loader)),\n",
+        "              \"Valid Accuracy: {:.3f}\".format(accuracy/len(val_loader)))\n",
+        "        "
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
