Load the checkpoint of the  pre-trained model

--- a/Agro-detect.ipynb
+++ b/Agro-detect.ipynb
@@ -2060,7 +2060,8 @@
       "cell_type": "code",
       "source": [
         "# save model\n",
-        "torch.save(model.state_dict(), 'classifier.pth')"
+        "torch.save({\"state_dict\":model.state_dict(),\n",
+        "           \"class_to_idx\":model.class_to_idx}, 'classifier.pth')"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2073,10 +2074,12 @@
       },
       "cell_type": "code",
       "source": [
+        "# load the model\n",
         "def load_checkpoint(file_path):\n",
-        "    state_dict = torch.load(file_path)\n",
+        "    state_dict = torch.load(file_path, map_location=\"cpu\")\n",
         "    \n",
         "    model = models.densenet201(pretrained=True)\n",
+        "    model.class_to_idx = state_dict[\"class_to_idx\"]\n",
         "    \n",
         "    classifier = classifier = nn.Sequential(OrderedDict([\n",
         "              ('fc1', nn.Linear(1920, 500)),\n",
@@ -2094,9 +2097,10 @@
         "    for param in model.parameters():\n",
         "        param.requires_grad = False\n",
         "        \n",
-        "    model.load_state_dict(state_dict)\n",
+        "    model.load_state_dict(state_dict[\"state_dict\"], strict=False)\n",
         "    \n",
-        "    return model"
+        "    return model\n",
+        "\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -2105,12 +2109,38 @@
       "metadata": {
         "id": "y6ZRNluvwIOv",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "257748ce-2df3-4e59-f5f7-2721decb6a86"
       },
       "cell_type": "code",
       "source": [
         "# laod the model\n",
         "model = load_checkpoint(\"classifier.pth\")"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/Users/rose/anaconda3/envs/agro/lib/python3.6/site-packages/torchvision/models/densenet.py:212: UserWarning: nn.init.kaiming_normal is now deprecated in favor of nn.init.kaiming_normal_.\n",
+            "  nn.init.kaiming_normal(m.weight.data)\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "metadata": {
+        "id": "PLmUG_TyhRaN",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
