--- a/Agro-detect.ipynb
+++ b/Agro-detect.ipynb
@@ -2140,6 +2140,61 @@
       },
       "cell_type": "code",
       "source": [
+        "def process_image(image_path):\n",
+        "    \n",
+        "    test_transform = transforms.Compose([transforms.Resize(255),\n",
+        "                                      transforms.CenterCrop(224),\n",
+        "                                      transforms.ToTensor(),\n",
+        "                                      transforms.Normalize([0.485, 0.456, 0.406],\n",
+        "                                                           [0.229, 0.224, 0.225])])\n",
+        "    from PIL import Image\n",
+        "    im = Image.open(image_path)\n",
+        "    im = test_transform(im)\n",
+        "\n",
+        "    return im"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "kqdScDFryP3x",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
+        "def predict(image, model):\n",
+        "    # we have to process the image as we did while training the others\n",
+        "    image = process_image(image)\n",
+        "    \n",
+        "    image_input = image.unsqueeze(0)\n",
+        "    \n",
+        "    model.eval()\n",
+        "    outputs = model(image_input)\n",
+        "    ps = torch.exp(outputs)\n",
+        "    \n",
+        "    top_p, top_cls = ps.topk(5, dim=1)\n",
+        "    top_cls = top_cls.detach().numpy().tolist()[0]\n",
+        "    \n",
+        "    # covert indices to classes\n",
+        "    idx_to_class = {v: k for k, v in model.class_to_idx.items()}\n",
+        "    \n",
+        "    top_cls = [idx_to_class[top_class] for top_class in top_cls]\n",
+        "    \n",
+        "    return top_p, top_cls"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "metadata": {
+        "id": "xCoIwjAbyUnw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "execution_count": 0,
